[project]
name = "tax-line-ai"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "awscrt>=0.32.2",
    "boto3>=1.43.0",
    "botocore>=1.43.0",
    "openai>=2.33.0",
    "openai-agents>=0.0.19",
    "pydantic>=2.13.3",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
]

[dependency-groups]
dev = [
    "ruff>=0.9.0",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.format]
quote-style = "double"
